# backend/src/main/java/nh/recipify/domain/api/RecipeDto.java
@@ -1,33 +1,38 @@
 package nh.recipify.domain.api;
 
 import jakarta.validation.constraints.NotNull;
-import nh.recipify.domain.model.DifficultyLevel;
+import nh.recipify.domain.model.Feedback;
 import nh.recipify.domain.model.Recipe;
 
+import java.time.LocalDateTime;
 import java.util.List;
 
 public record RecipeDto(
 
     @NotNull Long id,
+    @NotNull LocalDateTime createdAt,
     @NotNull String userFullname,
     @NotNull String title,
     @NotNull String headline,
     @NotNull int preparationTime,
     @NotNull int cookTime,
     @NotNull List<CategoryDto> categories,
-    @NotNull DifficultyLevel difficulty
+    @NotNull String mealType,
+    @NotNull double averageRating
 ) {
 
     static RecipeDto forRecipe(Recipe r) {
         return new RecipeDto(
             r.getId(),
+            r.getCreatedAt(),
             r.getUser().getFullname(),
-            r.getHeadline(),
             r.getTitle(),
+            r.getHeadline(),
             r.getPreparationTime(),
             r.getCookTime(),
             r.getCategories().stream().map(CategoryDto::of).toList(),
-            r.getDifficulty()
+            r.getMealType().getName(),
+            r.getFeedbacks().stream().mapToInt(Feedback::getRating).average().orElse(0)
         );
     }
 
