# backend/src/main/java/nh/recipify/domain/model/DifficultyLevel.java
@@ -1,27 +1,0 @@
-package nh.recipify.domain.model;
-
-import com.fasterxml.jackson.annotation.JsonIgnore;
-import jakarta.persistence.*;
-import jakarta.validation.constraints.NotNull;
-
-
-
-
-@Entity
-@Table(name = "difficulty_levels")
-public class DifficultyLevel {
-
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    @JsonIgnore
-    private Long id;
-
-    @NotNull
-    private String name;
-
-    protected DifficultyLevel(){}
-
-    public DifficultyLevel(String name) {
-        this.name = name;
-    }
-}
